api/nbql/parser/nexus_parser.go
// Code generated from ./Nexus.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // Nexus
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type NexusParser struct {
	*antlr.BaseParser
}

var NexusParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func nexusParserInit() {
	staticData := &NexusParserStaticData
	staticData.LiteralNames = []string{
		"", "';'", "'('", "')'", "'='", "','", "'*'", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "'+'",
		"'-'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "K_PUSH", "K_QUERY", "K_REMOVE", "K_SHOW",
		"K_SET", "K_FROM", "K_TO", "K_AT", "K_TAGGED", "K_AGGREGATE", "K_BY",
		"K_ON", "K_LIMIT", "K_SERIES", "K_AFTER", "K_EMPTY", "K_WINDOWS", "K_METRICS",
		"K_TAGS", "K_TAG", "K_KEYS", "K_VALUES", "K_WITH", "K_KEY", "K_TIME",
		"K_NOW", "K_TRUE", "K_FALSE", "K_NULL", "K_FLUSH", "K_MEMTABLE", "K_DISK",
		"K_ALL", "K_ORDER", "K_ASC", "K_DESC", "K_AS", "K_DT", "K_RELATIVE",
		"PLUS", "MINUS", "DURATION_LITERAL", "NUMBER", "IDENTIFIER", "STRING_LITERAL",
		"WS", "LINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"statement", "pushStatement", "queryStatement", "time_range", "query_clauses",
		"removeStatement", "showStatement", "flushStatement", "aggregation_spec_list",
		"aggregation_spec", "series_specifier", "metric_name", "tag_list", "tag_assignment",
		"tag_value", "field_list", "field_assignment", "timestamp", "duration",
		"value", "literal_value",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// NexusParserInit initializes any static state used to implement NexusParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewNexusParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func NexusParserInit() {
	staticData := &NexusParserStaticData
	staticData.once.Do(nexusParserInit)
}

// NewNexusParser produces a new parser instance for the optional input antlr.TokenStream.
func NewNexusParser(input antlr.TokenStream) *NexusParser {
	NexusParserInit()
	this := new(NexusParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &NexusParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Nexus.g4"

	return this
}

// NexusParser tokens.
const (
	NexusParserEOF              = antlr.TokenEOF
	NexusParserT__0             = 1
	NexusParserT__1             = 2
	NexusParserT__2             = 3
	NexusParserT__3             = 4
	NexusParserT__4             = 5
	NexusParserT__5             = 6
	NexusParserK_PUSH           = 7
	NexusParserK_QUERY          = 8
	NexusParserK_REMOVE         = 9
	NexusParserK_SHOW           = 10
	NexusParserK_SET            = 11
	NexusParserK_FROM           = 12
	NexusParserK_TO             = 13
	NexusParserK_AT             = 14
	NexusParserK_TAGGED         = 15
	NexusParserK_AGGREGATE      = 16
	NexusParserK_BY             = 17
	NexusParserK_ON             = 18
	NexusParserK_LIMIT          = 19
	NexusParserK_SERIES         = 20
	NexusParserK_AFTER          = 21
	NexusParserK_EMPTY          = 22
	NexusParserK_WINDOWS        = 23
	NexusParserK_METRICS        = 24
	NexusParserK_TAGS           = 25
	NexusParserK_TAG            = 26
	NexusParserK_KEYS           = 27
	NexusParserK_VALUES         = 28
	NexusParserK_WITH           = 29
	NexusParserK_KEY            = 30
	NexusParserK_TIME           = 31
	NexusParserK_NOW            = 32
	NexusParserK_TRUE           = 33
	NexusParserK_FALSE          = 34
	NexusParserK_NULL           = 35
	NexusParserK_FLUSH          = 36
	NexusParserK_MEMTABLE       = 37
	NexusParserK_DISK           = 38
	NexusParserK_ALL            = 39
	NexusParserK_ORDER          = 40
	NexusParserK_ASC            = 41
	NexusParserK_DESC           = 42
	NexusParserK_AS             = 43
	NexusParserK_DT             = 44
	NexusParserK_RELATIVE       = 45
	NexusParserPLUS             = 46
	NexusParserMINUS            = 47
	NexusParserDURATION_LITERAL = 48
	NexusParserNUMBER           = 49
	NexusParserIDENTIFIER       = 50
	NexusParserSTRING_LITERAL   = 51
	NexusParserWS               = 52
	NexusParserLINE_COMMENT     = 53
)

// NexusParser rules.
const (
	NexusParserRULE_statement             = 0
	NexusParserRULE_pushStatement         = 1
	NexusParserRULE_queryStatement        = 2
	NexusParserRULE_time_range            = 3
	NexusParserRULE_query_clauses         = 4
	NexusParserRULE_removeStatement       = 5
	NexusParserRULE_showStatement         = 6
	NexusParserRULE_flushStatement        = 7
	NexusParserRULE_aggregation_spec_list = 8
	NexusParserRULE_aggregation_spec      = 9
	NexusParserRULE_series_specifier      = 10
	NexusParserRULE_metric_name           = 11
	NexusParserRULE_tag_list              = 12
	NexusParserRULE_tag_assignment        = 13
	NexusParserRULE_tag_value             = 14
	NexusParserRULE_field_list            = 15
	NexusParserRULE_field_assignment      = 16
	NexusParserRULE_timestamp             = 17
	NexusParserRULE_duration              = 18
	NexusParserRULE_value                 = 19
	NexusParserRULE_literal_value         = 20
)

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	PushStatement() IPushStatementContext
	QueryStatement() IQueryStatementContext
	RemoveStatement() IRemoveStatementContext
	ShowStatement() IShowStatementContext
	FlushStatement() IFlushStatementContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NexusParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NexusParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NexusParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) EOF() antlr.TerminalNode {
	return s.GetToken(NexusParserEOF, 0)
}

func (s *StatementContext) PushStatement() IPushStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPushStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPushStatementContext)
}

func (s *StatementContext) QueryStatement() IQueryStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IQueryStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IQueryStatementContext)
}

func (s *StatementContext) RemoveStatement() IRemoveStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRemoveStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRemoveStatementContext)
}

func (s *StatementContext) ShowStatement() IShowStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IShowStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IShowStatementContext)
}

func (s *StatementContext) FlushStatement() IFlushStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFlushStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFlushStatementContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NexusListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NexusListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NexusVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NexusParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, NexusParserRULE_statement)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case NexusParserK_PUSH:
		{
			p.SetState(42)
			p.PushStatement()
		}

	case NexusParserK_QUERY:
		{
			p.SetState(43)
			p.QueryStatement()
		}

	case NexusParserK_REMOVE:
		{
			p.SetState(44)
			p.RemoveStatement()
		}

	case NexusParserK_SHOW:
		{
			p.SetState(45)
			p.ShowStatement()
		}

	case NexusParserK_FLUSH:
		{
			p.SetState(46)
			p.FlushStatement()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == NexusParserT__0 {
		{
			p.SetState(49)
			p.Match(NexusParserT__0)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(52)
		p.Match(NexusParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPushStatementContext is an interface to support dynamic dispatch.
type IPushStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	K_PUSH() antlr.TerminalNode
	Metric_name() IMetric_nameContext
	K_SET() antlr.TerminalNode
	Field_list() IField_listContext
	K_TIME() antlr.TerminalNode
	Timestamp() ITimestampContext
	K_TAGGED() antlr.TerminalNode
	Tag_list() ITag_listContext

	// IsPushStatementContext differentiates from other interfaces.
	IsPushStatementContext()
}

type PushStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPushStatementContext() *PushStatementContext {
	var p = new(PushStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NexusParserRULE_pushStatement
	return p
}

func InitEmptyPushStatementContext(p *PushStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NexusParserRULE_pushStatement
}

func (*PushStatementContext) IsPushStatementContext() {}

func NewPushStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PushStatementContext {
	var p = new(PushStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NexusParserRULE_pushStatement

	return p
}

func (s *PushStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *PushStatementContext) K_PUSH() antlr.TerminalNode {
	return s.GetToken(NexusParserK_PUSH, 0)
}

func (s *PushStatementContext) Metric_name() IMetric_nameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetric_nameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetric_nameContext)
}

func (s *PushStatementContext) K_SET() antlr.TerminalNode {
	return s.GetToken(NexusParserK_SET, 0)
}

func (s *PushStatementContext) Field_list() IField_listContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IField_listContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IField_listContext)
}

func (s *PushStatementContext) K_TIME() antlr.TerminalNode {
	return s.GetToken(NexusParserK_TIME, 0)
}

func (s *PushStatementContext) Timestamp() ITimestampContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITimestampContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITimestampContext)
}

func (s *PushStatementContext) K_TAGGED() antlr.TerminalNode {
	return s.GetToken(NexusParserK_TAGGED, 0)
}

func (s *PushStatementContext) Tag_list() ITag_listContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITag_listContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITag_listContext)
}

func (s *PushStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PushStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PushStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NexusListener); ok {
		listenerT.EnterPushStatement(s)
	}
}

func (s *PushStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NexusListener); ok {
		listenerT.ExitPushStatement(s)
	}
}

func (s *PushStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NexusVisitor:
		return t.VisitPushStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NexusParser) PushStatement() (localctx IPushStatementContext) {
	localctx = NewPushStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, NexusParserRULE_pushStatement)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.Match(NexusParserK_PUSH)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(55)
		p.Metric_name()
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == NexusParserK_TIME {
		{
			p.SetState(56)
			p.Match(NexusParserK_TIME)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(57)
			p.Timestamp()
		}

	}
	p.SetState(62)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == NexusParserK_TAGGED {
		{
			p.SetState(60)
			p.Match(NexusParserK_TAGGED)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(61)
			p.Tag_list()
		}

	}
	{
		p.SetState(64)
		p.Match(NexusParserK_SET)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(65)
		p.Field_list()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IQueryStatementContext is an interface to support dynamic dispatch.
type IQueryStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	K_QUERY() antlr.TerminalNode
	Metric_name() IMetric_nameContext
	Time_range() ITime_rangeContext
	K_TAGGED() antlr.TerminalNode
	Tag_list() ITag_listContext
	Query_clauses() IQuery_clausesContext

	// IsQueryStatementContext differentiates from other interfaces.
	IsQueryStatementContext()
}

type QueryStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryStatementContext() *QueryStatementContext {
	var p = new(QueryStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NexusParserRULE_queryStatement
	return p
}

func InitEmptyQueryStatementContext(p *QueryStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NexusParserRULE_queryStatement
}

func (*QueryStatementContext) IsQueryStatementContext() {}

func NewQueryStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryStatementContext {
	var p = new(QueryStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NexusParserRULE_queryStatement

	return p
}

func (s *QueryStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryStatementContext) K_QUERY() antlr.TerminalNode {
	return s.GetToken(NexusParserK_QUERY, 0)
}

func (s *QueryStatementContext) Metric_name() IMetric_nameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetric_nameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetric_nameContext)
}

func (s *QueryStatementContext) Time_range() ITime_rangeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITime_rangeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITime_rangeContext)
}

func (s *QueryStatementContext) K_TAGGED() antlr.TerminalNode {
	return s.GetToken(NexusParserK_TAGGED, 0)
}

func (s *QueryStatementContext) Tag_list() ITag_listContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITag_listContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITag_listContext)
}

func (s *QueryStatementContext) Query_clauses() IQuery_clausesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IQuery_clausesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IQuery_clausesContext)
}

func (s *QueryStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NexusListener); ok {
		listenerT.EnterQueryStatement(s)
	}
}

func (s *QueryStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NexusListener); ok {
		listenerT.ExitQueryStatement(s)
	}
}

func (s *QueryStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NexusVisitor:
		return t.VisitQueryStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NexusParser) QueryStatement() (localctx IQueryStatementContext) {
	localctx = NewQueryStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, NexusParserRULE_queryStatement)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(67)
		p.Match(NexusParserK_QUERY)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(68)
		p.Metric_name()
	}
	{
		p.SetState(69)
		p.Time_range()
	}
	p.SetState(72)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == NexusParserK_TAGGED {
		{
			p.SetState(70)
			p.Match(NexusParserK_TAGGED)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(71)
			p.Tag_list()
		}

	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&1099514314752) != 0 {
		{
			p.SetState(74)
			p.Query_clauses()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITime_rangeContext is an interface to support dynamic dispatch.
type ITime_rangeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	K_FROM() antlr.TerminalNode
	AllTimestamp() []ITimestampContext
	Timestamp(i int) ITimestampContext
	K_TO() antlr.TerminalNode
	K_RELATIVE() antlr.TerminalNode
	DURATION_LITERAL() antlr.TerminalNode

	// IsTime_rangeContext differentiates from other interfaces.
	IsTime_rangeContext()
}

type Time_rangeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTime_rangeContext() *Time_rangeContext {
	var p = new(Time_rangeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NexusParserRULE_time_range
	return p
}

func InitEmptyTime_rangeContext(p *Time_rangeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = NexusParserRULE_time_range
}

func (*Time_rangeContext) IsTime_rangeContext() {}

func NewTime_rangeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Time_rangeContext {
	var p = new(Time_rangeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = NexusParserRULE_time_range

	return p
}

func (s *Time_rangeContext) GetParser() antlr.Parser { return s.parser }

func (s *Time_rangeContext) K_FROM() antlr.TerminalNode {
	return s.GetToken(NexusParserK_FROM, 0)
}

func (s *Time_rangeContext) AllTimestamp() []ITimestampContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITimestampContext); ok {
			len++
		}
	}

	tst := make([]ITimestampContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITimestampContext); ok {
			tst[i] = t.(ITimestampContext)
			i++
		}
	}

	return tst
}

func (s *Time_rangeContext) Timestamp(i int) ITimestampContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITimestampContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITimestampContext)
}

func (s *Time_rangeContext) K_TO() antlr.TerminalNode {
	return s.GetToken(NexusParserK_TO, 0)
}

func (s *Time_rangeContext) K_RELATIVE() antlr.TerminalNode {
	return s.GetToken(NexusParserK_RELATIVE, 0)
}

func (s *Time_rangeContext) DURATION_LITERAL() antlr.TerminalNode {
	return s.GetToken(NexusParserDURATION_LITERAL, 0)
}

func (s *Time_rangeContext) GetRuleContext() antlr.RuleContext {
	return s
}
